tests/pos/i6849b.scala
object A {
  def unapplySeq(a: Any): Seq[_] = ""
}

def unapply(x: Any) = x match { case A() => }
