tests/neg/i6371/A_1.scala
object A {
  inline def foo(a: Any): Unit = a match {
    case _: Int =>
    case _ =>
  }
}
